# trivium-cipher

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.py
c-trivium/: .gitignore  CMakeLists.txt  README.md
c-trivium/inc/: trivium.h
c-trivium/src/: test.c  trivium.c
c-trivium/tests/: CMakeLists.txt  test.c
pytrivium/: MANIFEST.in  README.md  setup.py  test.py  trivium.py
pytrivium/_cffi_build/: pytrivium_build.py
pytrivium/pytrivium/: __init__.py  trivium.py  trivium_old.py
pytrivium/src/_cffi_src/: trivium_build.py
pytrivium/src/_cffi_src/c-trivium/: trivium.c  trivium.h
pytrivium/src/pytrivium/: trivium.py  trivium_old.py
pytrivium/tests/: demo.py
tests/: test.py
trivium-c/: .gitignore
trivium-c/tests/: test.c  test_trivium.c
